# Kairos

./: .gitignore  .gitmodules  AGENTS.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.ai/: pharos-protocol-baseline.json
.codex/: rules  skills
config/: style-sources.json
designs/: 2026-03-28--middle-version-protocol-first.md  2026-03-29--m1-protocol-and-store.md  2026-04-01--remove-path-timezones-use-utc-create-time.md  2026-04-03--analyze-mac-mlx-model-ab-report.md  2026-04-05--supervisor-console-and-project-workspace.md  analyze-performance-iterations.md  analyze-performance-optimization.md  architecture.md  current-solution-summary.md  phase1-plan.md  project-structure.md  protocol-glossary.md  requirements.md  risks.md
ml-server/: pyproject.toml
ml-server/kairos_ml/: clip_runner.py  device.py  main.py  ocr_runner.py  vlm_runner.py  whisper_runner.py
ml-server/tests/: test_asr_batcher.py  test_vlm_runner.py
scripts/: init-ai.ps1  init-ai.sh  jianying-export.ps1  jianying-export.py  jianying-export.sh  kairos-progress.ps1  kairos-progress.sh  kairos-supervisor.ps1  kairos-supervisor.sh  keyframe-concurrency-benchmark.mjs  ml-models-init.sh  ml-server.ps1  ml-server.sh  pharos-protocol-hash.mjs  style-analysis-progress-viewer.html  style-analysis-progress.ps1  style-analysis-progress.sh  vlm-attention-benchmark.py
src/: index.ts
src/store/: gps.ts  (+26 more)
test/: pharos-context-and-matcher.test.ts  pharos-gpx-timed.test.ts  project-timeline.test.ts  script-generator.test.ts  segment-cuts.test.ts  style-profile.md  style-script-subagents.test.ts
(+304 files in other folders)
