[project]
name = "kairos-ml"
version = "0.1.0"
description = "Kairos ML server — local media analysis"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "Pillow",
]

[project.optional-dependencies]
# Apple Silicon: pure MLX stack, no PyTorch
mlx = [
    "mlx-vlm",
    "mlx-whisper",
    "mlx_clip @ git+https://github.com/harperreed/mlx_clip.git",
]

# CUDA / CPU: faster-whisper ASR + PyTorch VLM/CLIP stack
cuda = [
    "faster-whisper==1.2.1",
    "ctranslate2==4.6.0",
    "setuptools<81",
    "torch",
    "torchvision",
    "transformers",
    "accelerate",
    "einops",
    "modelscope",
    "open-clip-torch",
    "tiktoken",
    "transformers_stream_generator==0.0.4",
]

ocr = ["paddleocr", "paddlepaddle"]
ocr-easy = ["easyocr"]

[project.scripts]
kairos-ml = "kairos_ml.main:run"
